<resources>
    <string name="ApplicationName">TTRSS-Reader</string>
    <string name="IntentPublish">Publish content</string>
    <string name="IntentSubscribe">Subscribe to feed</string>
    <string name="ApplicationDescription">Tiny Tiny RSS Reader is an application for reading your feeds from your Tiny Tiny RSS instance.</string>
    <string name="Main.ShowPreferencesMenu">Preferences</string>
    <string name="Main.RefreshMenu">Refresh</string>
    <string name="Main.ImageCache">Cache images</string>
    <string name="Preferences.Reset">Reset Preferences</string>
    <string name="Preferences.ResetDatabase">Reset Database</string>
    <string name="Preferences.Btn">Preferences</string>
    <string name="Changelog.Title">Changelog</string>
    <string name="DonateUrl">https://code.google.com/p/ttrss-reader-fork/wiki/Donations</string>
    <string name="Welcome.Title">Welcome</string>
    <string name="Welcome.Message">Welcome to TTRSS-Reader!\n\nPlease note that this Reader only works with a \"Tiny Tiny RSS\" Server.\n\nIf this is the first time you started TTRSS-Reader you should set your Serverlocation and User-Settings. Press "Preferences" to proceed.</string>
    <string name="Check.Crash">A crashreport was saved, do you want to send it to the developer by mail?</string>
    <string name="AboutActivity.Title">About</string>
    <string name="AboutActivity.CloseBtn">Close</string>
    <string name="AboutActivity.DonateBtn">Want to Donate?</string>
    <string name="AboutActivity.VersionText">Version:</string>
    <string name="AboutActivity.VersionCodeText">Version-Code:</string>
    <string name="AboutActivity.UrlTextValue">https://ttrss-reader-fork.googlecode.com/</string>
    <string name="AboutActivity.LicenseText">License:</string>
    <string name="AboutActivity.LicenseTextValue">GPL v3</string>
    <string name="AboutActivity.LastSyncText">Last sync:</string>
    <string name="ArticleActivity.OpenLink">Article</string>
    <string name="ArticleActivity.ShareLink">Share</string>
    <string name="ArticleActivity.ShareTitle">Send link…</string>
    <string name="ArticleActivity.MediaPlay">Play attached Media-File</string>
    <string name="ArticleActivity.MediaDisplayLink">Open attachment</string>
    <string name="ArticleActivity.ArticleLink">-> Article-Link</string>
    <string name="ArticleActivity.ShareURL">Share URL</string>
    <string name="ArticleActivity.CopyURL">Copy URL</string>
    <string name="ArticleActivity.ShareArticle">Share Article</string>
    <string name="ArticleActivity.ShowCaption">Show image-caption</string>
    <string name="SubscribeActivity.offline">Working offline, can\'t request action from server.</string>
    <string name="SubscribeActivity.invalidUrl">URL is invalid.</string>
    <string name="SubscribeActivity.feedExists">Feed already subscribed.</string>
    <string name="SubscribeActivity.contentIsHTML">URL content is HTML, no feeds available.</string>
    <string name="SubscribeActivity.multipleFeeds">URL content is HTML which contains multiple feeds. Here you should call extractfeedurls in rpc-backend to get all possible feeds.</string>
    <string name="SubscribeActivity.cannotDownload">Couldn\'t download the URL content.</string>
    <string name="SubscribeActivity.errorCode">Server returned code %s and the following message:</string>
    <string name="Commons.DisplayOnlyUnread">Display unread</string>
    <string name="Commons.DisplayOnlyCachedImages">Only cached articles</string>
    <string name="Commons.InvertSort">Invert order</string>
    <string name="Commons.DisplayAll">Display all</string>
    <string name="Commons.SelectArticles">Show all articles</string>
    <string name="Commons.SelectFeeds">Show all feeds</string>
    <string name="Commons.MarkAllRead">All read</string>
    <string name="Commons.MarkFeedsRead">Feeds read</string>
    <string name="Commons.MarkFeedRead">Feed read</string>
    <string name="Commons.MarkRead">Mark as read</string>
    <string name="Commons.MarkUnread">Mark as unread</string>
    <string name="Commons.MarkStar">Star</string>
    <string name="Commons.MarkUnstar">Starred</string>
    <string name="Commons.MarkPublish">Publish</string>
    <string name="Commons.MarkPublishNote">Publish with a note</string>
    <string name="Commons.AddArticleLabel">Add label(s)</string>
    <string name="Commons.MarkUnpublish">Published</string>
    <string name="Commons.MarkAboveRead">Mark articles above read</string>
    <string name="VCategory.AllArticles">All Articles</string>
    <string name="VCategory.FreshArticles">Fresh Articles</string>
    <string name="VCategory.PublishedArticles">Published Articles</string>
    <string name="VCategory.StarredArticles">Starred Articles</string>
    <string name="Feed.UncategorizedFeeds">Uncategorized Feeds</string>
    <string name="CategoryActivity.NoServer">No Server specified.</string>
    <string name="CategoryActivity.Donate">Want to Donate?</string>
    <string name="ConnectionPreferenceCategoryTitle">Connection</string>
    <string name="ConnectionPreferenceCategory">Connectivity</string>
    <string name="ConnectionUrlPreferenceTitle">Connection URL</string>
    <string name="ConnectionUrlPreferenceSummary">The URL to your Tiny Tiny RSS instance.</string>
    <string name="ConnectionUsernamePreferenceTitle">Username</string>
    <string name="ConnectionUsernamePreferenceSummary">The username of your Tiny Tiny RSS account.</string>
    <string name="ConnectionPasswordPreferenceTitle">Password</string>
    <string name="ConnectionPasswordPreferenceSummary">The password of your Tiny Tiny RSS account.</string>
    <string name="ConnectionLazyServerPreferenceTitle">Lazy Server</string>
    <string name="ConnectionLazyServerPreferenceSummary">Ask the server to update its feeds before we fetch them.</string>
    <string name="ConnectionSslPreferenceCategoryTitle">SSL Settings</string>
    <string name="ConnectionSslPreferenceTitle">SSL</string>
    <string name="ConnectionSslPreferenceSummary">Accept all SSL certificates.</string>
    <string name="ConnectionTrustHostsPreferenceTitle">Trust all Hosts</string>
    <string name="ConnectionTrustHostsPreferenceSummary">Accept Certificates from all hosts</string>
    <string name="ConnectionUseOldConnectorTitle">Use old connector (for Digest-Auth) (deprecated)</string>
    <string name="ConnectionUseOldConnectorSummary">The old connector allows digest authentication but can\'t connect to servers that use SNI. This connection method is deprecated and won\'t receive bugfixes anymore!</string>
    <string name="ConnectionKeystorePasswordPreferenceTitle">Custom Keystore Password</string>
    <string name="ConnectionKeystorePasswordPreferenceSummary">Password to unlock custom keystore</string>
    <string name="ConnectionUseKeystorePreferenceTitle">Custom Keystore</string>
    <string name="ConnectionUseKeystorePreferenceSummary">Use custom keystore</string>
    <string name="ConnectionHttpPreferenceCategoryTitle">HTTP-Authentication Settings</string>
    <string name="ConnectionHttpPreferenceTitle">HTTP-Authentication</string>
    <string name="ConnectionHttpPreferenceSummary">Use HTTP-Authentication</string>
    <string name="ConnectionHttpUsernamePreferenceTitle">Username</string>
    <string name="ConnectionHttpPasswordPreferenceTitle">Password</string>
    <string name="ConnectionHttpPasswordPreferenceSummary">The password for your HTTP-based authentication method</string>
    <string name="UsagePreferenceCategoryTitle">Usage</string>
    <string name="UsageOpenUrlEmptyArticleTitle">Open URL for empty article</string>
    <string name="UsageOpenUrlEmptyArticleSummary">Automatically visits the Website of the article in the browser if the content is empty.</string>
    <string name="UsageUseVolumeKeysTitle">Navigate with volume-keys</string>
    <string name="UsageUseVolumeKeysSummary">Press up for the next newer article, down for older article.</string>
    <string name="UsageOfflineTitle">Work offline</string>
    <string name="DisplayPreferenceCategoryTitle">Display</string>
    <string name="DisplayVirtualPreferenceTitle">Show virtual feeds</string>
    <string name="DisplayVirtualPreferenceSummary">Uncheck to hide TTRSS virtual feeds.</string>
    <string name="DisplayLoadImagesPreferenceTitle">Load images</string>
    <string name="DisplayLoadImagesPreferenceSummary">Uncheck to disable image-loading from external ressources in Webview.</string>
    <string name="InvertBrowseArticlesPreferenceTitle">Invert browsing articles</string>
    <string name="InvertBrowseArticlesPreferenceSummary">If checked, opening a category directly opens all articles within, else it shows the feeds.</string>
    <string name="HeadlineSizeTitle">Size of the Title-Field from Article-Header</string>
    <string name="HeadlineSizeSummary">Changes the size (default: 16sp) to the given value.</string>
    <string name="TextZoomTitle">Text-Zoom in percent</string>
    <string name="TextZoomSummary">Zoom (textual) content of articles by n%.</string>
    <string name="CacheImagesOnStartupTitle">Start ImageCache on startup?</string>
    <string name="CacheImagesOnStartupSummary">Enable to start the image-cache on every start of the reader, all articles+images will be fetched in the background.</string>
    <string name="CacheImagesOnlyWifiTitle">Only on Wifi?</string>
    <string name="CacheImagesOnlyWifiSummary">Sets the automatic ImageCache on startup to only run when Wifi is used.</string>
    <string name="DisplayAlignFlushLeftTitle">Left-aligned Text</string>
    <string name="DisplayAlignFlushLeftSummary">Article text will be aligned flush left, ragged right. Default is justified.</string>
    <string name="DisplayDateTimeFormatSystemTitle">Date/Time format</string>
    <string name="DisplayDateTimeFormatSystemSummary">Enable to use the system\'s default for displaying date and time. Disable to use a custom format.</string>
    <string name="DisplayDateFormatTitle">Custom date format</string>
    <string name="DisplayDateFormatSummary">Specify a DateFormat string for the date (see Wiki). Defaults to \"dd.MM.yyyy\". Invalid values will be silently ignored and the default will be used.</string>
    <string name="DisplayDateFormatDefault">dd.MM.yyyy</string>
    <string name="DisplayTimeFormatTitle">Custom time format</string>
    <string name="DisplayTimeFormatSummary">Specify a DateFormat string for the time (see Wiki). Defaults to \"kk:mm\". Invalid values will be silently ignored and the default will be used.</string>
    <string name="DisplayTimeFormatDefault">kk:mm</string>
    <string name="DisplayDarkBackgroundTitle">Use dark background?</string>
    <string name="DisplayDarkBackgroundSummary">Enable this to display the articles with a dark background for easier reading at night.</string>
    <string name="SystemPreferenceCategoryTitle">System</string>
    <string name="LogSensitiveDataTitle">Log sensitive data?</string>
    <string name="LogSensitiveDataSummary">If enabled the log-output of this application may contain sensitive information such as passwords or session-ids from your configuration. Only enable if necessary, should be for debugging purposes only.</string>
    <string name="DeleteDBOnNextStartupTitle">Delete DB on next startup</string>
    <string name="DeleteDBOnNextStartupSummary">If set to true the internal Database will be deleted only on the next start of the application.</string>
    <string name="DeleteDBOnStartupTitle">Delete DB on startup</string>
    <string name="DeleteDBOnStartupSummary">If set to true the internal Database will be deleted on EVERY start of the application.</string>
    <string name="SaveAttachmentTitle">Save attachments…</string>
    <string name="CacheFolderTitle">Cache-Folder…</string>
    <string name="FeedSubscribeTitle">Subscribe to Feed</string>
    <string name="FeedUnsubscribeTitle">Unsubscribe Feed</string>
</resources>