<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010 N. Braden.

    This file is part of ttrss-reader-fork. This program is free software; you
    can redistribute it and/or modify it under the terms of the GNU
    General Public License as published by the Free Software Foundation;
    either version 3 of the License, or (at your option) any later
    version.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    General Public License for more details. You should have received a
    copy of the GNU General Public License along with this program; If
    not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/DisplayPreferenceCategoryTitle" >

    <PreferenceCategory android:title="@string/DisplayPreferenceCategoryTitle" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="DisplayAlignFlushLeftPreference"
            android:summary="@string/DisplayAlignFlushLeftSummary"
            android:title="@string/DisplayAlignFlushLeftTitle" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="DisplayArticleLinkPreference"
            android:summary="@string/DisplayArticleLinkSummary"
            android:title="@string/DisplayArticleLinkTitle" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="DisplayDateTimeFormatSystemPreference"
            android:summary="@string/DisplayDateTimeFormatSystemSummary"
            android:title="@string/DisplayDateTimeFormatSystemTitle" />

        <EditTextPreference
            android:name="@string/DisplayDateFormatTitle"
            android:defaultValue="@string/DisplayDateFormatDefault"
            android:inputType="textFilter"
            android:key="DisplayDateFormatPreference"
            android:summary="@string/DisplayDateFormatSummary"
            android:title="@string/DisplayDateFormatTitle" />

        <EditTextPreference
            android:name="@string/DisplayTimeFormatTitle"
            android:defaultValue="@string/DisplayTimeFormatDefault"
            android:inputType="textFilter"
            android:key="DisplayTimeFormatPreference"
            android:summary="@string/DisplayTimeFormatSummary"
            android:title="@string/DisplayTimeFormatTitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="DisplayDarkBackgroundPreference"
            android:summary="@string/DisplayDarkBackgroundSummary"
            android:title="@string/DisplayDarkBackgroundTitle" />

        <org.ttrssreader.preferences.EditIntegerPreference
            android:name="@string/HeadlineSizeTitle"
            android:defaultValue="16"
            android:inputType="number"
            android:key="HeadlineSizePreference"
            android:maxLength="2"
            android:summary="@string/HeadlineSizeSummary"
            android:title="@string/HeadlineSizeTitle" />

        <org.ttrssreader.preferences.EditIntegerPreference
            android:name="@string/TextZoomTitle"
            android:defaultValue="100"
            android:inputType="number"
            android:key="TextZoomPreference"
            android:maxLength="3"
            android:summary="@string/TextZoomSummary"
            android:title="@string/TextZoomTitle" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="MarkReadInMenuPreference"
            android:summary="@string/MarkReadInMenuSummary"
            android:title="@string/MarkReadInMenuTitle" />
    </PreferenceCategory>

</PreferenceScreen>