<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010 N. Braden.

    This file is part of ttrss-reader-fork. This program is free software; you
    can redistribute it and/or modify it under the terms of the GNU
    General Public License as published by the Free Software Foundation;
    either version 3 of the License, or (at your option) any later
    version.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    General Public License for more details. You should have received a
    copy of the GNU General Public License along with this program; If
    not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/UsagePreferenceCategoryTitle" >

    <PreferenceCategory android:title="@string/UsagePreferenceCategoryTitle" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UsageOpenUrlEmptyArticlePreference"
            android:summary="@string/UsageOpenUrlEmptyArticleSummary"
            android:title="@string/UsageOpenUrlEmptyArticleTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="UsageUseVolumeKeysPreference"
            android:summary="@string/UsageUseVolumeKeysSummary"
            android:title="@string/UsageUseVolumeKeysTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="DisplayUseButtonsPreference"
            android:summary="@string/DisplayUseButtonsSummary"
            android:title="@string/DisplayUseButtonsTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="DisplayShowVirtualPreference"
            android:summary="@string/DisplayVirtualPreferenceSummary"
            android:title="@string/DisplayVirtualPreferenceTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="DisplayLoadImagesPreference"
            android:summary="@string/DisplayLoadImagesPreferenceSummary"
            android:title="@string/DisplayLoadImagesPreferenceTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="InvertBrowseArticlesPreference"
            android:summary="@string/InvertBrowseArticlesPreferenceSummary"
            android:title="@string/InvertBrowseArticlesPreferenceTitle" />
    </PreferenceCategory>

</PreferenceScreen>