<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010 N. Braden.

    This file is part of ttrss-reader-fork. This program is free software; you
    can redistribute it and/or modify it under the terms of the GNU
    General Public License as published by the Free Software Foundation;
    either version 3 of the License, or (at your option) any later
    version.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    General Public License for more details. You should have received a
    copy of the GNU General Public License along with this program; If
    not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/ConnectionSslPreferenceCategoryTitle" >

    <PreferenceCategory android:title="@string/ConnectionSslPreferenceCategoryTitle" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="ConnectionSSLPreference"
            android:summary="@string/ConnectionSslPreferenceSummary"
            android:title="@string/ConnectionSslPreferenceTitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="ConnectionTrustHostsPreference"
            android:summary="@string/ConnectionTrustHostsPreferenceSummary"
            android:title="@string/ConnectionTrustHostsPreferenceTitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="ConnectionSSLPreference"
            android:disableDependentsState="false"
            android:key="ConnectionUseKeystorePreference"
            android:summary="@string/ConnectionUseKeystorePreferenceSummary"
            android:title="@string/ConnectionUseKeystorePreferenceTitle" />

        <EditTextPreference
            android:name="@string/ConnectionKeystorePasswordPreferenceTitle"
            android:defaultValue=""
            android:dependency="ConnectionUseKeystorePreference"
            android:inputType="textPassword"
            android:key="ConnectionKeystorePasswordPreference"
            android:summary="@string/ConnectionKeystorePasswordPreferenceSummary"
            android:title="@string/ConnectionKeystorePasswordPreferenceTitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="ConnectionUseOldConnector"
            android:summary="@string/ConnectionUseOldConnectorSummary"
            android:title="@string/ConnectionUseOldConnectorTitle" />
    </PreferenceCategory>

</PreferenceScreen>